[gd_scene load_steps=4 format=3 uid="uid://dlwumx66nrgq4"]

[ext_resource type="Script" uid="uid://ixgmrlgpfjej" path="res://scripts/chest_opening_cutscene_2.gd" id="1_8jvo2"]
[ext_resource type="Texture2D" uid="uid://buwp30wxrjfd7" path="res://assets/sprites/treasureChestOpened.png" id="2_5s858"]
[ext_resource type="Texture2D" uid="uid://do0p0hyg4ejki" path="res://assets/sprites/scroll.png" id="3_swcll"]

[node name="ChestOpeningCutscene2" type="Node2D"]
script = ExtResource("1_8jvo2")

[node name="ChestSprite2D" type="Sprite2D" parent="."]
position = Vector2(581, 333)
scale = Vector2(15.7556, 15.7556)
texture = ExtResource("2_5s858")

[node name="ScrollSprite2D" type="Sprite2D" parent="."]
position = Vector2(581, 321)
scale = Vector2(8.1017, 8.1017)
texture = ExtResource("3_swcll")

[node name="ScrollText" type="Label" parent="."]
offset_left = 417.0
offset_top = 129.0
offset_right = 738.0
offset_bottom = 503.0
autowrap_mode = 3

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="NextLevelButton" type="Button" parent="."]
offset_left = 588.0
offset_top = 490.0
offset_right = 745.0
offset_bottom = 521.0
text = "Back to Main Menu"

[node name="ToBeContinuedLabel" type="Label" parent="."]
offset_left = 478.0
offset_top = 418.0
offset_right = 693.0
offset_bottom = 452.0
theme_override_font_sizes/font_size = 24
text = "TO BE CONTINUED"

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
